modified some files

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -80,31 +80,31 @@
 				<h2>Our Players</h2>
 			</div>
 			<div class="player-box text-center-xs">
-				<img src="http://placehold.it/200/200/DDD" alt="asd" />
+				<img src="https://via.placeholder.com/200.png/09f/fff" alt="asd" />
 				<h3 class="player-title"><span>Name:</span>Ahmed Abdo</h3>
 				<p class="player-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam reprehenderit iusto reiciendis, perferendis iure atque vero dignissimos. Perspiciatis unde nemo fugit dolorum sapiente adipisci mollitia maiores, sint eveniet, officia pariatur?</p>
 				<a class="link" href="#">Read More .. </a>
 			</div>
 			<div class="player-box text-center-xs">
-				<img src="http://placehold.it/200/200/DDD" alt="asd" />
+				<img src="https://via.placeholder.com/200.png/09f/fff" alt="asd" />
 				<h3 class="player-title"><span>Name:</span>Ahmed sayed</h3>
 				<p class="player-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam reprehenderit iusto reiciendis, perferendis iure atque vero dignissimos. Perspiciatis unde nemo fugit dolorum sapiente adipisci mollitia maiores, sint eveniet, officia pariatur?</p>
 				<a class="link" href="#">Read More .. </a>
 			</div>
 			<div class="player-box text-center-xs">
-				<img src="http://placehold.it/200/200/DDD" alt="asd" />
+				<img src="https://via.placeholder.com/200.png/09f/fff" alt="asd" />
 				<h3 class="player-title"><span>Name:</span>said Adm</h3>
 				<p class="player-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam reprehenderit iusto reiciendis, perferendis iure atque vero dignissimos. Perspiciatis unde nemo fugit dolorum sapiente adipisci mollitia maiores, sint eveniet, officia pariatur?</p>
 				<a class="link" href="#">Read More .. </a>
 			</div>
 			<div class="player-box text-center-xs">
-				<img src="http://placehold.it/200/200/DDD" alt="asd" />
+				<img src="https://via.placeholder.com/200.png/09f/fff" alt="asd" />
 				<h3 class="player-title"><span>Name:</span>Mohammed Sayed</h3>
 				<p class="player-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam reprehenderit iusto reiciendis, perferendis iure atque vero dignissimos. Perspiciatis unde nemo fugit dolorum sapiente adipisci mollitia maiores, sint eveniet, officia pariatur?</p>
 				<a class="link" href="#">Read More .. </a>
 			</div>
 			<div class="player-box text-center-xs">
-				<img src="http://placehold.it/200/200/DDD" alt="asd" />
+				<img src="https://via.placeholder.com/200.png/09f/fff" alt="asd" />
 				<h3 class="player-title"><span>Name:</span>Ramy Ali</h3>
 				<p class="player-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam reprehenderit iusto reiciendis, perferendis iure atque vero dignissimos. Perspiciatis unde nemo fugit dolorum sapiente adipisci mollitia maiores, sint eveniet, officia pariatur?</p>
 				<a class="link" href="#">Read More .. </a>
@@ -138,14 +138,14 @@
 			<div class="gallery text-center-xs">
 				<h3 class="section-title">Latest From Blog</h3>
 				<div class="img-box">
-					<img src="http://placehold.it/200/200/f0f" alt="" />
+					<img src="https://via.placeholder.com/200.png/09f/fff" alt="" />
 					<div class="text">
 						<h4>lorem testing title</h4>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum iste harum quo eos, nulla veritatis perspiciatis natus ab laudantium, sequi temporibus praesentium at maxime. </p>
 					</div>
 				</div>
 				<div class="img-box">
-					<img src="http://placehold.it/200/200/f0f" alt="" />
+					<img src="https://via.placeholder.com/200.png/09f/fff" alt="" />
 					<div class="text">
 						<h4>lorem testing title</h4>
 						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum iste harum quo eos, nulla veritatis perspiciatis natus ab laudantium, sequi temporibus praesentium at maxime. </p>
@@ -177,8 +177,8 @@
 			</div>
 			<div class="clearfix"></div>
 			<div class="copyright">
-				<div class="text">All Right Reserved &copy; 2021 </div>
-				<div class="author">Designed By Os Template</div>
+				<div class="text">All Right Reserved &copy; 2022 </div>
+				<div class="author">Designed By Ah Template</div>
 			</div>
 		</div>
 	</div>
